changing file organization and enhancements to CSS

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         <title>Leeds Personal Website</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="css/styles.css">    
     </head>
     <body>
         <table cellspacing=20>
-            <td> <img src="Leeds_Photo.png"></td>
+            <td> <img src="images/Leeds_Photo.png"></td>
             <td>
                 <h1>
                     Leeds Rising
@@ -30,6 +30,7 @@
         </ul>
         <a href="skills.html">My skills</a>
         <a href="contact.html">Contact</a>
+        <hr>
         <h3>
             Work Experience
         </h3>
@@ -50,6 +51,7 @@
                 <td>Workday</td>
             </tr>
         </table>
+        <hr>
         <h3>
             Skills
         </h3>
